# mine-nas-ai-video

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements-filter.txt
deploy/armbian/: person-filter-server.service
deploy/freebsd/: llama_server  mosquitto-nas-video.conf  nas-video-ab.env.example  nas_video
docs/: architecture.md  daughter-detector.md  freebsd-jail.md  person-filter.md  rv1106-mqtt.md  tuning.md
edge/rv1106/: README.md
edge/rv1106/board_service/: Makefile  config.example.ini
edge/rv1106/board_service/src/: config.cpp  config.h  decode_test.cpp  enroll.cpp  face_detect.cpp  face_detect.h  face_recog.cpp  face_recog.h  facedb.cpp  facedb.h  h264_source.cpp  h264_source.h  main.cpp  mpp_decoder.cpp  mpp_decoder.h  mqtt_publisher.cpp  mqtt_publisher.h  rknn_engine.cpp  rknn_engine.h  rockiva_detector.cpp  rockiva_detector.h  rockiva_probe.cpp  (+9 more)
edge/rv1106/deploy/: S98daughter_watch  install_on_board.sh  rollback_on_board.sh  run.sh
scripts/: export_daughter_training_frames.py  test_llm_compat.py
src/nas_video_summarizer/: analysis.py  app.py  archive.py  cli.py  config.py  database.py  daughter_detector.py  ffmpeg_tools.py  llm.py  mqtt.py  person_filter.py  person_filter_server.py  requeue.py  workers.py
src/nas_video_summarizer/static/: app.css  app.js
tests/: test_analysis_result.py  test_app.py  test_cli.py  test_config.py  test_database.py  test_daughter_detector.py  test_ffmpeg_tools.py  test_llm.py  test_mqtt.py  test_person_filter.py  test_person_filter_models.py  test_requeue.py  test_workers.py
