[project]
name = "mine-nas-ai-video"
version = "0.1.0"
description = "FreeBSD jail service for saving family moments from RTSP camera streams."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
nas-video = "nas_video_summarizer.app:run"
nas-video-check = "nas_video_summarizer.cli:check_main"

[dependency-groups]
dev = [
    "pytest>=8.2,<9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nas_video_summarizer"]

[tool.uv]
package = true
